--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mdx-js/loader": "^2.3.0",
-    "@mdx-js/react": "^2.3.0",
+    "@mdx-js/loader": "2.3.0",
+    "@mdx-js/react": "2.3.0",
     "@next/mdx": "13.4.4",
-    "@react-three/drei": "9.52.2",
-    "@react-three/fiber": "8.10.0",
-    "@react-three/postprocessing": "2.7.0",
+    "@react-three/drei": "9.71.0",
+    "@react-three/fiber": "8.13.0",
+    "@react-three/rapier": "1.0.1",
     "leva": "0.9.34",
     "next": "13.4.4",
     "react": "18.2.0",
