--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "2.3.0",
+    "@mdx-js/react": "2.3.0",
+    "@next/mdx": "13.5.3",
     "@react-three/drei": "9.86.0",
     "@react-three/fiber": "8.14.3",
     "@react-three/rapier": "1.1.1",
