--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mdx-js/loader": "2.3.0",
-    "@mdx-js/react": "2.3.0",
-    "@next/mdx": "13.5.3",
     "@react-three/drei": "9.86.0",
     "@react-three/fiber": "8.14.3",
     "@react-three/rapier": "1.1.1",
+    "contentlayer": "^0.3.4",
+    "date-fns": "^2.30.0",
     "leva": "0.9.35",
     "next": "13.5.3",
+    "next-contentlayer": "^0.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
+    "rehype-slug": "^6.0.0",
     "three": "0.157.0"
   },
   "devDependencies": {
