--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "format:write": "prettier --write \"**/*.{css,js,json,jsx,ts,tsx}\"",
     "format": "prettier \"**/*.{css,js,json,jsx,ts,tsx}\"",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@react-three/drei": "9.86.4",
@@ -36,6 +37,8 @@
     "autoprefixer": "^10.4.16",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.5",
