--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "prettier-plugin-tailwindcss": "^0.5.6",
     "tailwindcss": "^3.3.3",
     "typescript": "5.2.2"
+  },
+  "engines": {
+    "node": "^18"
   }
 }
