--- a/package.json
+++ b/package.json
@@ -5,26 +5,38 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "format:write": "prettier --write \"**/*.{css,js,json,jsx,ts,tsx}\"",
-    "format": "prettier \"**/*.{css,js,json,jsx,ts,tsx}\"",
+    "format": "prettier --write \"**/*.{css,js,json,jsx,ts,tsx}\"",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install"
   },
   "dependencies": {
-    "@react-three/drei": "9.88.4",
-    "@react-three/fiber": "8.14.6",
-    "@react-three/rapier": "1.1.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "accept-language": "^3.0.18",
+    "classnames": "^2.3.2",
     "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
+    "framer-motion": "^10.16.4",
+    "i18next": "^23.6.0",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-resources-to-backend": "^1.1.4",
     "leva": "0.9.35",
     "next": "13.5.5",
     "next-contentlayer": "^0.3.4",
+    "next-themes": "^0.2.1",
+    "nextjs-toploader": "^1.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^13.3.0",
+    "react-icons": "^4.11.0",
+    "react-markdown": "^9.0.0",
+    "react-particles": "^2.12.2",
+    "react-rough-notation": "^1.0.5",
     "react-scripts": "5.0.1",
+    "react-wrap-balancer": "^1.1.0",
     "rehype-slug": "^6.0.0",
-    "three": "0.157.0"
+    "tsparticles": "^2.12.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.8.0",
@@ -35,7 +47,6 @@
     "@types/node": "18.18.6",
     "@types/react": "18.2.29",
     "@types/react-dom": "18.2.14",
-    "@types/three": "0.157.2",
     "autoprefixer": "^10.4.16",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.5",
