--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next": "^23.6.0",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-resources-to-backend": "^1.1.4",
+    "ms": "^2.1.3",
     "leva": "0.9.35",
     "next": "13.5.6",
     "next-contentlayer": "^0.3.4",
@@ -37,7 +38,8 @@
     "react-scripts": "5.0.1",
     "react-wrap-balancer": "^1.1.0",
     "rehype-slug": "^6.0.0",
-    "tsparticles": "^2.12.0"
+    "tsparticles": "^2.12.0",
+    "tsparticles-engine": "^2.12.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.0.0",
@@ -45,6 +47,7 @@
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/ms": "^0.7.33",
     "@types/node": "18.18.6",
     "@types/react": "18.2.31",
     "@types/react-dom": "18.2.14",
